--- a/index.html
+++ b/index.html
@@ -5,9 +5,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>my_project</title>
+    <title>Pink Panther</title>
     <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href=" https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="icon" href="imgs/logoo.png">
+
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
 
 </head>
@@ -24,7 +26,7 @@
                 </ul>
                 <img src="imgs/logoo.png" class="nav2">
 
-                <ul class="right-menu ml-auto" style="list-style-type: none;">
+                <ul style="list-style-type: none;">
                     <li><i class="fa fa-facebook"></i></li>
                     <li><i class="fa fa-instagram"></i></li>
                     <li><i class="fa fa-pinterest"></i></li>
@@ -83,8 +85,8 @@
                 <P>Subscribe easy tutorials youtube channel to watch more videos on web desingning , graphics
                     desiging and digital markting . press the bell icon to get immediate notification for latest
                     videos. </P>
-                    <a href="#"> subscribe</a>
-                </div>
+                <a href="#"> subscribe</a>
+            </div>
         </div>
 
         <!------   ofer    --->
@@ -99,15 +101,21 @@
 
                 <div class="blogdiv">
                     <img class="blogimg_size" src="imgs/insta7.jpg"><br>
-                    <span><h5>New style 50% off</h5></span>
+                    <span>
+                        <h5>New style 50% off</h5>
+                    </span>
                 </div>
                 <div class="blogdiv">
                     <img class="blogimg_size" src="imgs/tarha.jpeg"><br>
-                    <span> <h5>Buy 1 Get 1 free</h5></span>
+                    <span>
+                        <h5>Buy 1 Get 1 free</h5>
+                    </span>
                 </div>
                 <div class="blogdiv">
                     <img class="blogimg_size" src="imgs/katem.jpg"><br>
-                    <span><h5>New Jelwellary collection</h5></span>
+                    <span>
+                        <h5>New Jelwellary collection</h5>
+                    </span>
                 </div>
             </div>
         </div>
